<resources>
    <string name="app_name">SampleApp</string>
    <string name="action_settings">Settings</string>
    <string name="REGISTER">REGISTER</string>
    <string name="SIGNIN">SIGNIN</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="textView1">Enter Email</string>
    <string name="textView2">Secret Code</string>
    <string name="button1">VERIFY</string>
    <string name="tv1">User Name</string>
    <string name="tv2">Secrect Code</string>
    <string name="tv3">Email</string>
    <string name="tv4">Pincode</string>
    <string name="tv5">Birth Day</string>
    <string name="et1">enter name</string>
    <string name="et2">secret code</string>
    <string name="et3">email</string>
    <string name="et4">1234</string>
    <string name="et5">14/07/2017</string>
    <string name="bt1">VALIDATE</string>
</resources>
