<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.angry.sampleapp.Register"
    tools:showIn="@layout/activity_register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv1"
        android:id="@+id/tv1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="55dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv2"
        android:id="@+id/tv2"
        android:layout_below="@+id/tv1"
        android:layout_alignLeft="@+id/tv1"
        android:layout_alignStart="@+id/tv1"
        android:layout_marginTop="37dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv3"
        android:id="@+id/tv3"
        android:layout_below="@+id/tv2"
        android:layout_alignLeft="@+id/tv2"
        android:layout_alignStart="@+id/tv2"
        android:layout_marginTop="37dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv4"
        android:id="@+id/tv4"
        android:layout_below="@+id/tv3"
        android:layout_alignLeft="@+id/tv3"
        android:layout_alignStart="@+id/tv3"
        android:layout_marginTop="37dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv5"
        android:id="@+id/tv5"
        android:layout_below="@+id/tv4"
        android:layout_alignRight="@+id/tv4"
        android:layout_alignEnd="@+id/tv4"
        android:layout_marginTop="65dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et1"
        android:text="@string/et1"
        android:layout_marginLeft="53dp"
        android:layout_marginStart="53dp"
        android:layout_alignBottom="@+id/tv1"
        android:layout_alignLeft="@+id/bt1"
        android:layout_alignStart="@+id/bt1"
        android:inputType="textCapWords" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et2"
        android:text="@string/et2"
        android:layout_alignBottom="@+id/tv2"
        android:layout_alignLeft="@+id/et1"
        android:layout_alignStart="@+id/et1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/et3"
        android:text="@string/et3"
        android:layout_above="@+id/tv4"
        android:layout_alignLeft="@+id/et2"
        android:layout_alignStart="@+id/et2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/et4"
        android:text="@string/et4"
        android:layout_alignBottom="@+id/tv4"
        android:layout_alignLeft="@+id/et3"
        android:layout_alignStart="@+id/et3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/et5"
        android:text="@string/et5"
        android:layout_alignBottom="@+id/tv5"
        android:layout_alignLeft="@+id/et4"
        android:layout_alignStart="@+id/et4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt1"
        android:id="@+id/bt1"
        android:layout_marginTop="62dp"
        android:layout_below="@+id/et5"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
